--- a/8월 3일.md
+++ b/8월 3일.md
@@ -170,4 +170,11 @@
 
 >A와 B가 하나의 트랜잭션으로 묶여 처리되어야 하므로 A와 B를 수행한 후 각각 커밋하는게 아니라 A와 B 모두 수행 후 커밋해야한다.
 
+## 참조
+
+[SQLD 개정판 개념정리](https://daeb.notion.site/SQLD-24-03-4c9de646ea114e198d845d0f701d3a53)
+
+[홍쌤의 데이터랩](https://www.youtube.com/playlist?list=PLbflMVhwy2jOoDIm7kVgt1_sYDJm_oBaD)
+
+
 
