--- a/8월 4일.md
+++ b/8월 4일.md
@@ -225,11 +225,504 @@ SElECt E.ENAME, EMP.SAL, E.DEPTNO
 FROM EMP E
 WHERE E.DEPTNO = 10;
 ```
+## 함수
 
+### 함수 기능
 
+- 기본적인 쿼리문을 더욱 강력하게 해줌
 
+- 데이터의 계산을 수행
 
+- 개별 데이터의 항목을 수정
 
+- FROM 절을 제외한 모든 절에서 사용 가능
 
+- 표시할 날짜 및 숫자 형식을 지정
 
+- 열 데이터의 유형을 변환
+
+### 함수의 종류(입력값의 수에 따라)
+
+- 단일행 함수와 복수행 함수로 구분
+
+- 단일행 함수 : input 과 output 의 관계가 1 : 1
+
+- 복수행 함수 : 여러 건의 데이터를 동시에 입력 받아서 하나의 요약값을 리턴
+
+    - 그룹함수 또는 집계함수라고도 함
+
+### 입/출력값의 타입에 따른 함수 분류
+
+### 1) 문자형 함수
+
+- 문자열 결함, 추출, 삭제 등을 수행
+
+- 단일행 함수 형태
+
+- output은 대부분 문자값(LENGTH, INSTR 제외)
+
+#### 문자함수 종류
+
+- **CHR(ASCII 코드)**
+    
+    : 코드 값에 따른 문자 출력
+    
+- **LOWER(문자열) → 소문자**
+    
+    : 입력 문자열을 소문자로 변환
+    
+- **UPPER(문자열) → 대문자**
+    
+    : 입력 문자열을 대문자로 변환
+    
+- **LTRIM(문자열, [특정문자] )** → 문자 사이에 있는 공백은 제거 안됨
+    
+    : 왼쪽 공백 제거, 특정문자 제거(제거 되면 멈춤)
+    
+    : 특정 문자로 여러 문자를 입력하면 그 안에 있는 모든 문자가 사라짐
+    
+    ex) LTRIM(’SQL’, ‘LE’) → SQ 
+    
+    : ‘LE’ 에 ‘L’, ‘E’ 가 있기 때문에 L, E를 날리는 것 대신 바로 멈춘다.
+    
+- **RTRIM(문자열, [특정문자])** → 문자 사이에 있는 공백은 제거 안됨
+    
+    : 오른쪽 공백 제거, 특정문자 제거(제거 되면 멈춤)
+    
+- **TRIM([위치값] [특정문자] [FROM] 문자열)** → , 없어도 됨 + 특정문자는 문자열 안됨
+    
+    : 왼쪽, 오른쪽 공백 제거하고 특정 문자 제거
+    
+    : 위치값은 **LEADING=왼쪽**부터, **TRAILING=오른쪽**부터, BOTH=둘 다
+    
+- **SUBSTR(문자열, 시작점, [길이] )** → 0부터 시작 X, 1부터 시작임
+    
+    : 문자열의 원하는 부분만 잘라서 반환(추출), 시작점 부터 자르기 시작해서, 길이 만큼 자른다.
+    
+    : 더 잘라질 수 없으면 최대한의 값으로 출력
+    
+    ex) SUBSTR(’블랙핑크제니’, 3, 2) → ‘핑크’
+    
+    ex) SUBSTR(’블랙핑’, 3, 3) → ‘핑’
+    
+- **INSTR(문자열, 특정문자, [시작점], [몇번째에 발견])**
+    
+    : 문자열에서 원하는 문자 찾아서 위치 반환, 여러개 찾아지면 몇번째 문자의 위치를 반환
+    
+    ex) INSTR(’A#B#C#’, ‘#’, 3, 2) → 6
+    
+- **LENGTH(문자열)**
+    
+    : 문자열의 길이를 반환
+    
+- **REPLACE(문자열, 찾는 문자열, [변경 할 문자열])**
+    
+    : 문자열에서 특정 문자열을 찾아서 이를 변경 → **변경 할 문자 입력 안하면 없앰**
+    
+- **LPAD(문자열, 길이, 특정 문자)**
+    
+    : 문자열이 설정한 길이가 될 떄 까지 왼쪽을 **특정 문자로 채움**
+    
+- **RPAD(문자열, 길이, 특정 문자)**
+    
+    : 위와 동일 
+    
+- **CONCAT(문자, 문자) → 결합**
+    
+    : 두 문자를 결합하는 함수
+
+- **TRANSLATE(문자열, 찾는 문자열, [변경 할 문자열])**
+    
+    : 글자를 1대1로 치환 → **매칭되는 글자끼리 치환, 바꿀 문자열 생략 불가, 빈 문자열 전달 시 NULL 리턴**
+
+    ex) TRANSLATE('ABBA', 'AB', 'ab') → abba
+
+#### SQL Server
+
+- SUBSTR -> SUBSTRING
+
+- LENGTH -> LEN
+
+- INSTR -> CHARINDEX
+
+### 2. 숫자형 함수
+
+- 숫자를 입력하면 숫자 값을 반환
+
+- 단일행 함수 형태의 숫자함수
+
+- ORACLE과 SQL Server 함수 거의 동일
+
+#### 숫자함수 종류
+
+- **ABS(수)**
+    
+    : 절댓값 반환
+    
+- **SIGN(수)**
+    
+    : 부호를 반환 → 양수 = 1 / 음수 = -1 / 0 = 0
+    
+- **CEIL(수) → 올림**
+    
+    : 소수점 이하의 수를 올림 한 정수로 반환
+    
+    : 음수인 소수를 넣으면 버리게 되면 커진다.
+    
+    ex) CEIL(72.86) → 73
+    
+    ex) CEIL(-33.4) → -33
+    
+- **ROUND(수, [자릿수]) → 반올림**
+    
+    : 수를 지정한 소수점 자릿수까지 반올림, Default = 정수로 만듬 = 0
+    
+    : 음수는 해당 자릿수의 정수를 반올림(-1 = 1의 자리를 반올림, -2 = 10자리)
+    
+    ex) ROUND(163.76, 1) → 163.8
+    
+    ex) ROUND(163.76, -2) → 200
+    
+- **TRUNC(수, [자릿수]) → 버림**
+    
+    : 수를 지정한 소수점 자릿수까지 버림, Default = 0
+    
+    : 음수는 해당 자릿수의 정수까지 버림
+    
+    ex) TRUNC(54.29, 1) → 54.2
+    
+    ex) TRUNC(54.29, -1) → 50
+    
+- **FLOOR(수) → 소수점 이하 버림**
+    
+    : 소수점 이하의 수를 버림
+    
+    ex) FLOOR(22.3) → 22
+    
+    ex) FLOOR(-22.3) → -23
+    
+- **MOD(수1, 수2) → 나머지**
+    
+    : 수1을 수2로 나눈 나머지를 반환
+    
+    : 수2가 0일 경우 수1을 그대로 반환
+    
+    ex) MOD(15, 7) → 1
+    
+    ex) MOD(15, -4) → 3
+
+- **POWER(M, N) → 거듭제곱**
+    
+    : M의 N 거듭제곱
+
+- **SQRT(수)**
+
+    : 루트값 리턴
+
+### 3. 날짜형 함수
+
+- 날짜 연산과 관련된 함수
+
+- ORACLE과 SQL Server 함수 거의 다름
+
+#### 날짜함수 종류
+
+- **SYSDATE**
+    
+    : 현재의 연, 월, 일, 시, 분, 초를 반환
+    
+    : nls_date_format에 따라 출력 포맷 달라질 수 있음
+    
+- **EXTRACT(특정 단위 FROM 날짜데이터 or SYSDATE)**
+    
+    : 특정 단위의 날짜를 반환
+    
+    ex) EXTRACT(YEAR FROM SYSDATE) → 2024
+    
+    ex) EXTRACT(MONTH FROM SYSDATE) → 3
+    
+- **ADD_MONTHS(날짜 데이터, 특정 개월 수)**
+    
+    : 입력한 날짜 데이터에 특정 개월 수를 더한 날짜를 반환해주는 함수 
+    
+    : **날짜의 이전 달이나 다음 달에 기준 날짜의 일자가 존재하지 않으면 해당 월의 마지막 일자 반환**
+    
+    ex) ADD_MONTHS( TO_DATE(’2021-12-31’), 1) → 2022-01-31
+    
+    ex) **ADD_MONTHS( DATE ‘2022-01-31’, 1) → 2022-02-28**
+
+- **CURRENT_DATE**
+
+    : 현재 날짜 리턴
+
+    : 날짜 출력 형식에 따라 다르게 출력됨
+
+- **CURRENT_TIMESTAMP**
+
+    : 현재 타임스탬프 리턴
+
+- **MONTHS_BETWEEN(날짜1, 날짜2)**
+
+    : 날짜1과 날짜2의 개월 수 차이 리턴
+
+    : 날짜1 < 날짜2 로 전달 시 음수 리턴
+
+- **LAST_DAY(날짜)**
+
+    : 주어진 월의 마지막 날짜 리턴
+
+- **NEXT_DAY(날짜, n)**
+
+    : 주어진 날짜 이후 지정된 요일의 첫 번째 날짜 리턴
+
+    : n = 1 : 일요일, 2 : 월요일, ~ , 7 : 토요일
+
+#### SQL Server
+
+- SYSDATE -> GETDATE
+
+- ADD_MONTHS -> DATEADD(월 뿐만 아니라 모든 단위 날짜 연산 가능)
+
+- MONTHS_BETWEEN -> DATEDIFF(두 날짜 사이의 년, 월, 일 추출)
+
+### 4. 변환함수
+
+- 값의 데이터 타입을 변환
+
+- 문자를 숫자로, 숫자를 문자로, 날짜를 문자로 변경
+
+#### 변환함수 종류
+
+- **TO_NUMBER(문자열)**
+    
+    : 문자열을 숫자로 변환
+    
+    : 숫자로 변환 안되는 진짜 문자가 들어가면 **에러 발생**
+    
+- **TO_CHAR(수 or 날짜, [포맷])**
+    
+    : 수나 날짜 데이터를 문자형 또는 입력 포맷으로 변환
+    
+- **TO_DATE(문자열, 포맷)**
+    
+    : 포맷 형식의 문자 데이터를 YYYY-MM-DD 형식의 날짜 데이터로 바꿈
+
+- **FORMAT(날짜, 포맷)**
+
+    : 날짜의 포맷 변경
+
+    : SQL Server 함수
+
+- **CAST(대상 AS 데이터타입)**
+
+    : 대상을 주어진 데이터타입으로 변환
+
+#### SQL Server
+
+- TO_NUMBER, TO_DATE, TO_CHAR -> CONVERT(포맷 전달 시)
+
+- 단순 변환일 경우 주로 CAST 사용
+
+### 5. 그룹함수
+
+- 다중행 함수
+
+- 여러 값이 input값으로 들어가서 하나의 요약된 값으로 리턴
+
+- GROUP BY와 함께 자주 사용됨
+
+- ORACLE과 SQL Server 거의 동일
+
+- NULL 값을 무시하고 연산
+
+#### 그룹함수 종류
+
+- **COUNT(대상)**
+    
+    : 행의 수 리턴
+    
+    ex) COUNT(*) → * 입력하면 **모든 칼럼에 대해 적용**
+    
+- **SUM(대상)**
+    
+    : 합을 리턴
+    
+- **AVG(대상)**
+    
+    : 평균을 리턴
+    
+- **MIN(대상)**
+    
+    : 최솟값 리턴
+    
+- **MAX(대상)**
+    
+    : 최댓값 리턴
+    
+- **VARIANCE(대상)**
+    
+    : 분산 리턴
+    
+- **STDDEV(대상)**
+    
+    : 표준편차 리턴
+
+#### SQL Server
+
+- VARIANCE - VAR
+
+- STDDEV -> STDEV
+
+### 6. 일반함수
+
+- 기타 함수(널 치환 함수 등)
+
+#### 일반(기타)함수 종류
+
+- **NVL(인수1, 인수2)**
+    
+    : 인수1의 값이 NULL일 경우 인수2를 반환
+    
+    : NULL이 아니면 그대로 인수1 반환
+    
+- **NULLIF(인수1, 인수2)**
+    
+    : 인수1과 인수2가 **같으면 NULL 반환**
+    
+    : 같지 않으면 인수1을 반환
+    
+- **COALESCE(인수1, 인수2, 인수3…, 그 외 리턴)**
+    
+    : NULL이 아닌 최초의 인수를 반환
+
+    : 인수가 모두 NULL이면 그 외 리턴값 리턴
+
+    : 그 외 리턴값 생략 시 NULL 리턴
+    
+- **NVL2(인수1, 인수2, 인수3) → 3개 까지**
+    
+    : 인수1이 NULL이 아니면 인수2, NULL이면 인수 3반환
+    
+    ex) NVL2(REVIEW_SCORE, ‘리뷰있음’, ‘리뷰없음’)
+
+함수가 아닌 CASE 구문형식으로도 특정 값을 치환 가능
+
+- CASE 구문 & WHEN 조건 & ELSE 처리
+    
+    **: 별도의 ELSE가 없으면 NULL 값이 ELSE의 DEFAULT가 된다.**
+    
+
+- **DECODE(대상, 값1, 리턴1, 값2, 리턴2, 값3, 리턴3……, ESLE 값)**
+    
+    : 대상이 값1이면 리턴1, 값2와 같으면 리턴2, 그 외에는 그 외 리턴값 리턴
+
+    : 대소비교에 따른 치환 불가
+
+    : 그 외 리턴 생략 시 NULL 리턴
+
+- **ISNULL(대상, 치환값)**
+
+    : 대상이 NULL이면 치환값이 리턴
+
+    : SQL Server 함수
+
+### WHEWE 절
+
+- 테이블의 데이터 중 원하는 조건에 맞는 데이터만 조회하고 싶을 경우 사용(엑셀의 필터기능과 유사)
+
+- 여러 조건 동시 전달 가능(AND 와 OR 로 조건 연결)
+
+- NULL 조회 시 IS NULL / IS NOT NULL 연산자 사용(`=` 연산자로 조회 불가)
+
+- 연산자를 사용하여 다양한 표현이 가능
+
+- 조건 전달 시 비교 대상의 데이터 타입 일치하는 것이 좋음
+
+    - EMP 테이블의 부서번호 컬럼의 데이터타입은 숫자인데 문자상수로 비교 시 성능 문제 발생할 수 있음
+
+#### 연산자 종류
+
+- `=`
+
+    : 같은 조건을 검색
+
+- `!=, <>`
+
+    : 같지 않은 조건을 검색
+
+- `>`
+
+    : 큰 조건을 검색
+
+- `>=`
+
+    : 크거나 같은 조건을 검색
+
+- `<`
+
+    : 작은 조건을 검색
+
+- `<=`
+
+    : 작거나 같은 조건을 검색
+
+- `BETWEEN a AND b`
+
+    : A와 B사이에 있는 범위 값을 모두 검색
+
+    : A와 B 포함
+
+    : 작은 값을 A에 큰 값을 B에 할당
+
+- `IN(a, b, c)`
+
+    : A 이거나 B 이거나 C 인 조건을 검색
+
+- `LIKE`
+
+    : 특정 패턴을 가지고 있는 조건을 검색
+
+    : 정확하게 일치하지 않아도 되는 패턴 조건 전달 시 사용
+
+    : `%`와 `_`와 함께 사용
+
+    - `%` : 자리수 제한 없는 모든이라는 의미
+
+    - `_` : 하나 당 한 자리수를 의미하며 모든 값을 표현함
+
+    ```sql
+    ENAME LIKE `S%` : 이름이 S 로 시작하는
+    
+    ENAME LIKE `%S%` : 이름에 S 를 포함하는
+    
+    ENAME LIKE `%S` : 이름이 S 로 끝나는
+    
+    ENAME LIKE `_S%` : 이름의 두 번째 글자가 S인
+    
+    ENAME LIKE `__S__` : 이름의 가운데 글자가 S이며 이름의 길이가 5 글자인
+    ```
+
+- `IS NULL / IS NOT NULL`
+
+    : NULL 값을 검색 / NULL 이 아닌 값을 검색
+
+- `A AND B`
+
+    : A 조건과 B 조건을 모두 만족하는 값만 검색
+
+- `A OR B`
+
+    : A 조건이나 B 조건 중 한가지라도 만족하는 값을 검색
+
+- `NOT A`
+
+    : A 가 아닌 모든 조건을 검색
+
+#### 주의사항
+
+- 문자나 날짜 상수 표현 시 반드시 홑따옴표 사용(다른 절에서도 동일 적용)
+
+- ORACLE은 문자상수의 경우 대소문자를 구분
+
+- MSSQL은 기본적으로 문자상수의 대소문자를 구분하지 X
 
