--- a/8월 4일.md
+++ b/8월 4일.md
@@ -726,3 +726,9 @@ WHERE E.DEPTNO = 10;
 
 - MSSQL은 기본적으로 문자상수의 대소문자를 구분하지 X
 
+## 참조
+
+[SQLD 개정판 개념정리](https://daeb.notion.site/SQLD-24-03-4c9de646ea114e198d845d0f701d3a53)
+
+[홍쌤의 데이터랩](https://www.youtube.com/playlist?list=PLbflMVhwy2jOoDIm7kVgt1_sYDJm_oBaD)
+
