--- a/8월 4일.md
+++ b/8월 4일.md
@@ -626,7 +626,7 @@ WHERE E.DEPTNO = 10;
 
     : SQL Server 함수
 
-### WHEWE 절
+## WHEWE 절
 
 - 테이블의 데이터 중 원하는 조건에 맞는 데이터만 조회하고 싶을 경우 사용(엑셀의 필터기능과 유사)
 
