--- a/8월 5일.md
+++ b/8월 5일.md
@@ -1,5 +1,5 @@
 # 강의 정리
-### GROUP BY 절
+## GROUP BY 절
 
 - 각 행을 특정 조건에 따라 그룹으로 분리하여 계산하도록 하는 구문식
 
@@ -25,7 +25,7 @@ GROUP BY 그룹핑컬럼명
 HAVING 그룹핑 대상 필터링 조건;
 ```
 
-### HAVING 절
+## HAVING 절
 
 - 그룹 함수 결과를 조건으로 사용할 때 사용하는 절
 
@@ -35,7 +35,7 @@ HAVING 그룹핑 대상 필터링 조건;
 
 - 내부적 연산 순서가 SELECT 절보다 먼저이므로 SELECT 절에서 선언된 Alias 사용 불가
 
-### ORDER BY 절
+## ORDER BY 절
 
 - 데이터는 입력된 순서대로 출력되나, 출력되는 행의 순서를 사용자가 변경하고자 할 떄 ORDER BY 절을 사용
 
@@ -70,7 +70,7 @@ ORDER BY 정렬컬럼명 [ASC | DESC];
 
 - ORACLE은 ORDER BY 절에 NULLS LAST | NULLS FIRST을 명시하여 NULL 정렬 순서 변경 가능
 
-### JOIN(조인)
+## JOIN(조인)
 
 - 여러 테이블의 데이터를 사용하여 동시 출력하거나 참조 할 경우 사용
 
@@ -142,7 +142,7 @@ WHERE 테이블1.컬럼 = 테이블2.컬럼
 
 - 테이블명이 중복되므로 반드시 테이블 별칭 사용
 
-### 표준 조인
+## 표준 조인
 
 - ANSI 표준으로 작성되는 INNER JOIN, CROSS JOIN, NATURAL JOIN, OUTER JOIN을 말함
 
