--- a/8월 5일.md
+++ b/8월 5일.md
@@ -249,5 +249,10 @@ FROM 테이블1 NATURAL JOIN 테이블2;
 
 - ORACLE 표준에는 없음
 
+## 참조
+
+[SQLD 개정판 개념정리](https://daeb.notion.site/SQLD-24-03-4c9de646ea114e198d845d0f701d3a53)
+
+[홍쌤의 데이터랩](https://www.youtube.com/playlist?list=PLbflMVhwy2jOoDIm7kVgt1_sYDJm_oBaD)
 
 
