--- a/8월 6일.md
+++ b/8월 6일.md
@@ -571,3 +571,6 @@ PERCENT_RANK() OVER([PARTITION BY 컬럼]
                 ORDER BY 컬럼 ASC|DESC);
 ```
 
+## 참조
+
+[홍쌤의 데이터랩](https://www.youtube.com/playlist?list=PLbflMVhwy2jOoDIm7kVgt1_sYDJm_oBaD)
