--- a/8월 7일.md
+++ b/8월 7일.md
@@ -297,3 +297,6 @@ UNPIVOT (VALUE 컬럼명 FOR STACK 컬럼명 IN (값1, 값2, ....));
 
 - REGEXP_COUNT(원본, 찾을문자열, [옵션])
 
+## 참조
+
+[홍쌤의 데이터랩](https://www.youtube.com/playlist?list=PLbflMVhwy2jOoDIm7kVgt1_sYDJm_oBaD)
