--- a/8월 10일.md
+++ b/8월 10일.md
@@ -106,7 +106,9 @@
 
 1) 일자별매출액에 일자별 매출 테이블과 동일하게 출력된다.
 
-2, 4) 작은 날짜쪽에 제일 큰 누적금액이 출력된다.
+2) 작은 날짜쪽에 제일 큰 누적금액이 출력된다.
+
+4) 작은 날짜쪽에 제일 큰 누적금액이 출력된다.
 
 3) 일자별매출 테이블을 SELF JOIN하여, A Alias 쪽에 먼저 읽혔다고 가정하면 다음처럼 데이터가 생성될 것이다.
 
